# ycmd

./: .clang-format  .clang-tidy  .coveragerc  .gitignore  .gitmodules  .mergify.yml  .travis.yml  .vimspector.json  .ycm_extra_conf.py  Build_On_Windows.md  CONTRIBUTING.md  CheckJavaVersion.java  DEBUG.md  DEV_SETUP.md  JAVA_SUPPORT.md  README.md  TESTS.md  Vagrantfile  _build_llvm.bat  _build_ycmd.bat  _run_both.bat  appveyor.yml  azure-pipelines.yml  benchmark.py  build.py  build.sh  check_core_version.py  codecov.yml  make_llvm_package.py  pytest.ini  requirements.txt  run_tests.py  run_tests.sh  setup.cfg  setup.py  style_format.sh  test_requirements.txt  tox.ini  update_api_docs.py  update_boost.py  (+8 more)
.circleci/: config.yml  install_dependencies.sh
.github/workflows/: ci.yml
api/: README.md
azure/: README.md  benchmark.sh  lint.sh  run_tests.sh
azure/linux/: install_dependencies.sh
azure/macos/: install_dependencies.sh
azure/windows/: benchmark.bat  install_dependencies.bat  run_tests.bat  send_coverage.bat
ci/: README.md
clang_includes/: arm_neon.h
cpp/: CMakeLists.txt
cpp/BoostParts/: CMakeLists.txt
cpp/BoostParts/boost/archive/iterators/: transform_width.hpp
cpp/BoostParts/boost/dynamic_bitset/: dynamic_bitset.hpp
cpp/BoostParts/boost/python/: make_constructor.hpp  to_python_indirect.hpp  to_python_value.hpp
cpp/BoostParts/boost/python/converter/: registered.hpp
cpp/BoostParts/boost/python/detail/: caller.hpp  wrap_python.hpp
cpp/BoostParts/boost/python/numpy/: ndarray.hpp
cpp/BoostParts/boost/python/object/: class_metadata.hpp  make_ptr_instance.hpp  pointer_holder.hpp
cpp/BoostParts/libs/filesystem/src/: codecvt_error_category.cpp  directory.cpp  error_handling.hpp  exception.cpp  operations.cpp  path.cpp  path_traits.cpp  portability.cpp  unique_path.cpp  utf8_codecvt_facet.cpp  windows_file_codecvt.cpp
cpp/BoostParts/libs/python/src/: exec.cpp
cpp/pstl/include/pstl/: algorithm  execution  memory  numeric
cpp/pstl/include/pstl/internal/: algorithm_impl.h  execution_defs.h  execution_impl.h  glue_algorithm_defs.h  glue_algorithm_impl.h  glue_execution_defs.h  glue_memory_defs.h  glue_memory_impl.h  glue_numeric_defs.h  glue_numeric_impl.h  memory_impl.h  numeric_impl.h  parallel_backend.h  parallel_backend_tbb.h  parallel_backend_utils.h  parallel_impl.h  pstl_config.h  unseq_backend_simd.h  utils.h
cpp/pybind11/pybind11/detail/: jod.y-E--
cpp/sparsehash/sparsehash/: dense_hash_map  dense_hash_set  sparse_hash_map  sparse_hash_set  sparsetable  traits
cpp/sparsehash/sparsehash/internal/: densehashtable.h  hashtable-common.h  libc_allocator_with_realloc.h  sparsehashtable.h
cpp/whereami/: whereami.c
cpp/ycm/: .ycm_extra_conf.py  .ycm_extra_conf_advanced.py  CMakeLists.txt  Candidate.cpp  Candidate.h  CandidateRepository.cpp  CandidateRepository.h  Character.cpp  Character.h  CharacterRepository.cpp  CharacterRepository.h  CodePoint.cpp  CodePoint.h  CodePointRepository.cpp  CodePointRepository.h  DLLDefines.h  Detail.cpp  Detail.h  IdentifierCompleter.cpp  IdentifierCompleter.h  IdentifierDatabase.cpp  IdentifierDatabase.h  IdentifierUtils.cpp  IdentifierUtils.h  LetterNode.cpp  LetterNode.h  LetterNodeArray.cpp  LetterNodeArray.h  LetterNodeListMap.cpp  LetterNodeListMap.h  Mutex.h  PythonSupport.cpp  PythonSupport.h  ReleaseGil.h  Repository.cpp  Repository.h  Result.cpp  Result.h  Utils.cpp  Utils.h  (+8 more)
cpp/ycm/ClangCompleter/: ClangCompleter.cpp  ClangCompleter.h  ClangHelpers.cpp  ClangHelpers.h  ClangUtils.cpp  ClangUtils.h  CompilationDatabase.cpp  CompilationDatabase.h  CompletionData.cpp  CompletionData.h  Diagnostic.h  Documentation.cpp  Documentation.h  FixIt.h  Location.h  Range.cpp  Range.h  Token.cpp  Token.h  TranslationUnit.cpp  TranslationUnit.h  TranslationUnitStore.cpp  TranslationUnitStore.h  UnsavedFile.h
cpp/ycm/benchmarks/: BenchUtils.cpp  BenchUtils.h  CMakeLists.txt  IdentifierCompleter_bench.cpp  PythonSupport_bench.cpp  main.cpp
cpp/ycm/fake_clang/: CMakeLists.txt  main.cpp
cpp/ycm/tests/: CMakeLists.txt  CandidateRepository_test.cpp  Candidate_test.cpp  CharacterRepository_test.cpp  Character_test.cpp  CodePointRepository_test.cpp  CodePoint_test.cpp  GraphemeBreakCases.inc  IdentifierCompleter_test.cpp  IdentifierUtils_test.cpp  IndexForChar_test.cpp  IndexForLetter_test.cpp  IsUppercase_test.cpp  LetterBitsetFromString_test.cpp  LetterNode_test.cpp  NormalizationCases.inc  Normalization_test.cpp  TestUtils.cpp  TestUtils.h  Utils_test.cpp  Word_test.cpp  main.cpp
cpp/ycm/tests/ClangCompleter/: ClangCompleter_test.cpp  TranslationUnit_test.cpp
cpp/ycm/tests/cmake/: FindGMock.cmake
cpp/ycm/tests/gmock/gtest/m4/: acx_pthread.m4
cpp/ycm/tests/gmock/gtest/src/: gtest-internal-inl.h  gtest.cc
cpp/ycm/tests/gmock/gtest/test/: gtest_unittest.cc
cpp/ycm/tests/testdata/: SWObject.h  SWObject.m  basic.cpp  basic.tags  goto.cpp  invalid_tag_file_format.tags
docs/: README.md  bundle.js  bundle.js.map  index.html  main.css  main.css.map  openapi.yaml  openapi.yml  package.json
examples/: .gitignore  .ycm_extra_conf.py  README.md  enum.py  example_client.py  requirements.txt  some_javascript.js  test_client.py
travis/: README.md  travis_install.sh
vala/: .ycm_extra_conf.py  meson.build  meson_options.txt
vala/benchmarks/: generate_methods.vala  meson.build  methods.vala
vala/src/: Candidate.vala  CandidateKind.vala  CandidateTrie.vala  Completer.vala  CompleterError.vala  Diagnostic.vala  DiagnosticKind.vala  Documentation.vala  Fix.vala  FixChunk.vala  Flags.vala  Location.vala  Range.vala  TranslationUnit.vala  meson.build  util.vala  version.vala
vala/tests/: complete.vala  meson.build  simple.vala
ycmd/: __init__.py  __main__.py  bottle_utils.py  default_settings.json  default_ycm_extra_conf.py  extra_conf_store.py  handlers.py  hmac_plugin.py  hmac_utils.py  identifier_utils.py  request_validation.py  request_wrap.py  responses.py  semantic_token.py  server_state.py  server_utils.py  user_options_store.py  utils.py  watchdog_plugin.py  web_plumbing.py  wsgi_server.py
(+564 files in other folders)
