[metadata]
name = ycmd
version = 0.0.1
author = ycmd contributors
author_email = ycm-users@googlegroups.com
description = A multi-language code comprehension and completion server
url = https://github.com/ycm-core/ycmd
license = GPLv3
long_description =
  file: README.md
  COPYING.txt

[options]
zip_safe = False
packages = find:
python_requires = >= 3.6
install_requires =
  wheel
  setuptools
  waitress == 1.4.3
  bottle == 0.12.18
  requests == 2.22.0
  regex == 2020.10.28
  jedi == 0.17.2
  watchdog == 0.10.2

[options.packages.find]
include = ycmd*
exclude = ycmd.tests*

[options.package_data]
ycmd = default_settings.json
